--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,14 +13,16 @@
     <meta name="author" content="">
 	<title>Underwater Hockey Scores</title>
 
-	<!-- Bootstrap Core CSS -->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 	<!-- Custom Fonts le-1.4.5.min.js-->
-	<link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
+	<!-- <link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet" type="text/css"> -->
 
 	<!-- site specific css -->
 	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -28,17 +30,17 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+	<!-- <script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='js/jquery.js') }}"></script> -->
+	<script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    
 	<!-- Bootstrap Core JavaScript -->
-	<script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-	<script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 	<script>
 	jQuery(document).ready(function(){
-		// This button will increment the value
 		$('.toggleDay').click(function(e){
 			dayFilter = $(this).attr('day');
 
-			//$(document.getElementById('#dayPager')).children().classList.remove('active');
 			$('#dayPager').find('.active').removeClass('active');
 			this.className= 'active toggleDay';
 
@@ -52,17 +54,18 @@
 			}
 		});
 	});
+    </script>
 	{% if request.host_url == "http://uwhscores.com/" or request.host_url == "http://www.uwhsores.com/" -%}
-    <!-- Google Analytics -->
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-64622005-1', 'auto');
-    ga('send', 'pageview');
-	{%- endif %}
-	</script>
+        ga('create', 'UA-64622005-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+    {% endif %}
 
 
 </head>
